# MCMCOscFitter

./: .gitattributes  .gitignore  .gitmodules  BASELINE_VERIFICATION.md  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  README.md
baselines/: check.sh  chi2fittest.golden  chi2fittestCU_fval.txt  event_rate.golden  event_rateCU.txt
cross_check/: CMakeLists.txt  chi2_calc.cxx  cross_check.cxx  prob_check.cxx  root2hist.cxx
data/: density.txt  genie_3_04_02_G18_10b_02_11b_k400_fine_grid.root
jax_barger/: README.md  compare_fit.py  compare_fit_fine.py  pyproject.toml  run_hierarchy_mcmc.py  run_mcmc.py  validate.py
jax_barger/jax_barger/: __init__.py  barger.py  config.py  earth.py  event_rate.py  matter.py  mcmc.py  pmns.py
pybind/: CMakeLists.txt  bindings.cxx  data_export.cxx
src/: CMakeLists.txt
src/app/: CMakeLists.txt  chi2fit.cxx  chi2fitCU.cu  chi2fitCU.cxx  chi2fitplotCU.cxx  chi2fittestCU.cxx  chi2table.cxx  event_rate.cxx  event_rateCU.cu  event_rateCU.cxx  event_rate_xcheck.cxx  nofit_check.cxx  plotter.cxx  single_fit.cxx  testfit.cxx  testfitbinned.cxx  testfitbinnedCU.cu  testfitbinnedCU.cxx  testptbinned.cxx  testsample.cxx  triple_fit.cxx
src/common/: binning_tool.hpp  constants.h  fit_config.h  interpolation.hxx  myhist.hpp  physics_input.cxx  physics_input.h  pod_hist.hpp  timer.hpp  tools.h
src/concepts/: mcmc_concepts.h
src/data/: CMakeLists.txt  DataSet.h  SimpleDataHist.cxx  SimpleDataHist.h  SimpleDataPoint.cxx  SimpleDataPoint.h
src/llh/: BinnedInteraction.cxx  BinnedInteraction.h  BinnedInteractionProd.cxx  CMakeLists.txt  ModelDataLLH.h  ParBinned.cu  ParBinned.cuh  ParBinned.h  ParBinnedInterface.cu  ParBinnedInterface.h  ParBinnedKernels.cu  ParBinnedKernels.cuh  SimpleInteraction.cxx  SimpleInteraction.h  chi2.h
src/state/: CMakeLists.txt  IHistogramPropagator.h  OscillationParameters.cxx  OscillationParameters.h  ParProb3ppOscillation.cu  ParProb3ppOscillation.cxx  ParProb3ppOscillation.h  ParProb3ppOscillation_devspan.cu  Prob3ppOscillation.cxx  Prob3ppOscillation.h  StateI.h
src/walker/: CMakeLists.txt  MCMCWorker.h  ParallelTempering.h  temperature_ladder.h  walker.cxx  walker.h
test/: CMakeLists.txt  test_binned_interaction.cxx  test_binning.cxx  test_chi2.cxx  test_constants.cxx  test_osc_params.cxx  test_parallel_tempering.cxx  test_walker.cxx
